fixed the contact alignment in the 500px media query.

--- a/css/index.css
+++ b/css/index.css
@@ -393,6 +393,10 @@ footer {
     .main-content .bottom-content .text-content {
       margin: 2vh;
       width: 100%;
+    }
+
+    .contact {
+      margin: 2vh;
       
     }
     }
